--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
             "email": "yaizafritis@gmail.com"
         }
     ],
+    "post-install-cmd": [
+        "php artisan clear-compiled",
+        "php artisan optimize",
+        "chmod -R 777 app/storage"
+    ],
     "require": {
         "ipinfo/ipinfo": "^1.1",
         "foolz/inet": "^0.6.0"
-    },
-    "post-install-cmd": [
-        "php artisan clear-compiled",
-        "chmod -R 777 public/"
-    ]
+    }
 }
