--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
             "email": "yaizafritis@gmail.com"
         }
     ],
-    "post-install-cmd": [
-        "php artisan clear-compiled",
-        "php artisan optimize",
-        "chmod -R 777 app/storage"
-    ],
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "chmod -R 777 app/storage"
+        ]
+    },
     "require": {
         "ipinfo/ipinfo": "^1.1",
         "foolz/inet": "^0.6.0"
