--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize",
-            "chmod -R 777 app/storage"
+            "chmod -R 777 public/"
         ]
     }
 }
